Fix partially #35, Juklak opens in new page

--- a/StudentPortal/app/views/prasyarat.scala.html
+++ b/StudentPortal/app/views/prasyarat.scala.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
     <head>
-    	@templates.head("Prasyarat Mata Kuliah")
+    	@templates.head("Persiapan Perwalian")
     </head>
     <body>
 		@templates.sidebar("prasyarat")
@@ -12,7 +12,7 @@
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
 				<div class="row">
-					<h2 class="text-center">PEMERIKSAAN PRASYARAT MATA KULIAH</h2> 
+					<h2 class="text-center">PERSIAPAN PERWALIAN</h2> 
 					<h4 class="text-center">SEMESTER @semester</h4> 
 				</div>
 				@if(list==null){
