--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
     <head>
-    	@templates.head("Data Mata Kuliah")
+    	@templates.head("Syarat Kelulusan")
     </head>
     <body>
 		@templates.sidebar("ringkasan")
@@ -11,7 +11,7 @@
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
 				<div class="row">
-					<h2 class="text-center">RINGKASAN DATA AKADEMIK</h2> 
+					<h2 class="text-center">SYARAT KELULUSAN</h2> 
 				</div>
 				<p></br></p>
 				@if(ringkasan==null){ 
