--- a/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/StudentPortal/app/views/templates/sidebar.scala.html
@@ -19,13 +19,13 @@
 					Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
 				</a></li>
 				<li @if(selected.equals("prasyarat")){class="active"}><a href="@routes.Application.prasyarat()">
-					Prasyarat Mata Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
+					Persiapan Perwalian<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
 				</a></li>
 				<li @if(selected.equals("jadwalKuliah")){class="active"}><a href="@routes.Application.jadwalKuliah()">
 					 Jadwal Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-calendar"></span>
 				</a></li>
 				<li @if(selected.equals("ringkasan")){class="active"}><a href="@routes.Application.ringkasan()">
-					Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
+					Syarat Kelulusan<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
 				<li @if(selected.equals("tentang")){class="active"}><a href="@routes.Application.tentang()">
 					Info &amp; Lapor Bug<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span>
