--- a/StudentPortal/app/views/tentang.scala.html
+++ b/StudentPortal/app/views/tentang.scala.html
@@ -26,7 +26,7 @@
 					<p>Data mahasiswa diunduh dari situs Portal Akademik Mahasiswa, dan mungkin disimpan oleh server di memori dalam jangka waktu tertentu. Server tidak memberikan akses kepada pihak
 					manapun (termasuk pengembang) atas data tersebut.</p>
 					<h2>Referensi</h2>
-					<p>Untuk peraturan lengkap, Anda dapat melihat <a href="http://ftisunpar.github.io/juklak/">Petunjuk Pelaksanaan Kegiatan Akademik FTIS</a>.</p>
+					<p>Untuk peraturan lengkap, Anda dapat melihat <a href="http://ftisunpar.github.io/juklak/" target="_blank">Petunjuk Pelaksanaan Kegiatan Akademik FTIS</a>.</p>
 				</div>
 			</div>
 		</div>
