--- a/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/StudentPortal/app/views/templates/sidebar.scala.html
@@ -18,13 +18,13 @@
 				<li @if(selected.equals("home")){class="active"}><a href="@routes.Application.home()">
 					Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
 				</a></li>
-				<li @if(selected.equals("prasyarat")){class="active"}><a href="@routes.Application.prasyarat()">
+				<li @if(selected.equals("prasyarat")){class="active"}><a href="@routes.Application.perwalian()">
 					Persiapan Perwalian<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
 				</a></li>
 				<li @if(selected.equals("jadwalKuliah")){class="active"}><a href="@routes.Application.jadwalKuliah()">
 					 Jadwal Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-calendar"></span>
 				</a></li>
-				<li @if(selected.equals("ringkasan")){class="active"}><a href="@routes.Application.ringkasan()">
+				<li @if(selected.equals("ringkasan")){class="active"}><a href="@routes.Application.kelulusan()">
 					Syarat Kelulusan<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
 				<li @if(selected.equals("tentang")){class="active"}><a href="@routes.Application.tentang()">
