--- a/StudentPortal/app/views/templates/head.scala.html
+++ b/StudentPortal/app/views/templates/head.scala.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="@routes.Assets.versioned("images/logo-IT.png")" />
+<link rel="icon" type="image/x-icon" href="@routes.Assets.versioned("images/LogoInformatika.jpg")" />
 <title>@title | Informatika Student Portal</title>
 
 <!-- CSS -->
