Layout fix & logo baru

--- a/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/StudentPortal/app/views/templates/sidebar.scala.html
@@ -1,5 +1,5 @@
 @(selected: String)
-<nav class="navbar navbar-inverse sidebar" role="navigation">
+<nav class="navbar-inverse sidebar" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sidebar-navbar-collapse">
@@ -8,10 +8,11 @@
 				<span class="icon-bar"></span>
 			</button>
 			<div class="logo-set">
-				<img src="@routes.Assets.versioned("images/logo-unpar.png")" width="25%" height="25%"/>
-				<img src="@routes.Assets.versioned("images/logo-IT.png")" width="25%" height="25%"/>
+				<br/>
+				<center> <img src="@routes.Assets.versioned("images/logo.png")" width="85%" alt="INFORMATIKA STUDENT PORTAL"/></center>
+				<br/>
 			</div>
-			<p class="navbar-brand">INFORMATIKA STUDENT PORTAL</p>
+			
 		</div>
 		<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
 			<ul class="nav navbar-nav">
