Optimize image sizes & remove unused ws.conf

--- a/StudentPortal/app/views/login.scala.html
+++ b/StudentPortal/app/views/login.scala.html
@@ -16,7 +16,7 @@
 							<div class="page-header">
 								<center>
 								<div class="logo-set">
-									<img src="@routes.Assets.versioned("images/logo.png")" width="320px" alt="INFORMATIKA STUDENT PORTAL"/>
+									<img src="@routes.Assets.versioned("images/logo.png")" width="100%" alt="INFORMATIKA STUDENT PORTAL"/>
 								</div>
 								</center>
 								<br>
