--- a/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/StudentPortal/app/views/templates/sidebar.scala.html
@@ -25,7 +25,7 @@
 				<li @if(selected.equals("jadwalKuliah")){class="active"}><a href="@routes.Application.jadwalKuliah()">
 					 Jadwal Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-calendar"></span>
 				</a></li>
-				<li @if(selected.equals("ringkasan")){class="active"}><a href="@routes.Application.kelulusan()">
+				<li @if(selected.equals("kelulusan")){class="active"}><a href="@routes.Application.kelulusan()">
 					Syarat Kelulusan<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
 				<li @if(selected.equals("tentang")){class="active"}><a href="@routes.Application.tentang()">
