--- a/StudentPortal/app/views/perwalian.scala.html
+++ b/StudentPortal/app/views/perwalian.scala.html
@@ -32,10 +32,10 @@
 								IP Lulus <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L99"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @dataAkademik.ipLulus<br>
 								IP N. Terbaik <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L113"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @dataAkademik.ipNTerbaik<br>
 								SKS lulus: @dataAkademik.sksLulusTotal<br>
-								@if(dataAkademik.nilaiTOEFLTerakhir !=0){
-									Nilai TOEFL Terakhir: @dataAkademik.nilaiTOEFLTerakhir<br>
+								@if(dataAkademik.nilaiTOEFL != null){
+									Nilai TOEFL: @dataAkademik.nilaiTOEFL<br>
 								}else{
-									Nilai TOEFL Terakhir: (belum mengambil)<br>
+									Nilai TOEFL: (belum mengambil)<br>
 								}
 							</div>
 						</div>
