Link ke sertifikat HTTPS

--- a/StudentPortal/app/views/login.scala.html
+++ b/StudentPortal/app/views/login.scala.html
@@ -39,7 +39,7 @@
 								</div>
 								 @Html(message)
 								<button name="submit" type="submit" class="form-control">Login <span class="glyphicon glyphicon-log-in"></span></button>
-								<p><a href="@routes.Assets.versioned("certs/IFStudentPortal-CA.crt")" style="color: white">Download sertifikat HTTPS</a></p>								
+								<p><a href="https://docs.google.com/document/u/1/d/1svBDGqZLnBKoKMcE9v9umcmF8TWCFZZGh5mLjw7X2UA/pub" style="color: white"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Petunjuk Penggunaan</a> <a href="@routes.Assets.versioned("certs/IFStudentPortal-CA.crt")" style="color: white"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Sertifikat HTTPS</a></p>								
 							</form>
 						</div>	
 					</div>										
