adjust for image change in new studentportal

--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -20,7 +20,7 @@
 						<div class="table-responsive profile-table">
 							<table class="table table-bordered">
 								<tr>
-									<td width="50" rowspan="3"><center><img src="@mhs.getPhotoURL().toString()"/></center></td>
+									<td width="50" rowspan="3"><center><img src="@mhs.getPhotoPath"/></center></td>
 									<td><h6>@mhs.getNama()</h6></td>
 								</tr>
 								<tr>
