Fix student e-mail example.

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -23,7 +23,7 @@
 								<div class="form-group">
 									<label for="email-input">Email</label> 
 									<div class="input-group">
-										<input name="email" type="email" class="form-control" id="email-input" placeholder="co: 6181901062@student.unpar.ac.id&#64;student.unpar.ac.id"/>
+										<input name="email" type="email" class="form-control" id="email-input" placeholder="co: 6181901062&#64;student.unpar.ac.id"/>
 										<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 									</div>
 								</div>
